--- a/index.html
+++ b/index.html
@@ -1,10 +1,71 @@
-<!DOCTYPE html>
-<html>
+<!Doctype>
+<html lang="en">
 <head>
-	<title></title>
+<title> LINDT </title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 </head>
 <body>
-Lindt
-<p>New</p>
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <a href="index.html" class="navbar-brand">WORLD OF LINDT</a>
+
+    <ul class="nav navbar-nav"> 
+        <li class="active"><a href="#">Shop of chocolate</a></li>
+        <li><a href="#">Sustainability</a></li> 
+        <li><a href="#">History</a></li> </ul>
+<form class="navbar-form navbar-left pull-right" role="search">
+  <div class="form-group">
+    <input type="text" class="form-control" placeholder="Search">
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
+
+  </div>
+</nav>
+
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<div id="menu">
+        	<ul>
+        	<I>
+            	<li class="menuitem"><a href="#/">Chocolate shop</a></li>
+                <li class="menuitem"><a href="#">World of Lindt</a></li>
+                <li class="menuitem"><a href="">Sustainability</a></li>
+                <li class="menuitem"><a href="#">New</a></li>
+                <li class="menuitem"><a href="#">Recipes</a></li>
+              <li class="menuitem"><a href="#">Gift Ideas</a></li>
+              </I>
+            </ul>
+<img src="Unknown.jpeg">
+<div class="logo">
+</div>
+<ul id="menu_horizontal">
+</div>
+<center>
+<img src=maxresdefault.jpg>
+</center>
+<I>
+<h3> DISCOVER OUR NEW FUSION OF FLAVOURS</h3>
+</I>
+<center>
+<img src=home_recipes_image.png>
+</center>
+<I>
+<p> EVERYDAY WITH EXCELLENCE </p>
+</I>
+<style>
+h1,h2{
+	display:inline;
+}</style>
+</head>
+<I>
+</I>
 </body>
 </html>
+<img src="photos.png">
+
