--- a/index - copie.html
+++ b/index - copie.html
@@ -8,6 +8,8 @@
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
@@ -15,9 +17,10 @@
     <a href="index.html" class="navbar-brand">WORLD OF LINDT</a>
 
     <ul class="nav navbar-nav"> 
-        <li class="active"><a href="#">Shop of chocolate</a></li>
-        <li><a href="#">Sustainability</a></li> 
-        <li><a href="#">History</a></li> </ul>
+        <li><a href="#">SHOP OF CHOCOLATE</a></li>
+        <li><a href="#">SUSTAINABILITY</a></li>
+        <li><a href="#">HISTORY</a></li>
+    </ul>
 <form class="navbar-form navbar-left pull-right" role="search">
   <div class="form-group">
     <input type="text" class="form-control" placeholder="Search">
@@ -28,44 +31,24 @@
   </div>
 </nav>
 
-<link rel="stylesheet" type="text/css" href="style.css">
-</head>
 <div id="menu">
-        	<ul>
-        	<I>
-            	<li class="menuitem"><a href="#/">Chocolate shop</a></li>
-                <li class="menuitem"><a href="#">World of Lindt</a></li>
-                <li class="menuitem"><a href="">Sustainability</a></li>
-                <li class="menuitem"><a href="#">New</a></li>
-                <li class="menuitem"><a href="#">Recipes</a></li>
-              <li class="menuitem"><a href="#">Gift Ideas</a></li>
-              </I>
-            </ul>
-<img src="Unknown.jpeg">
-<div class="logo">
+    <ul>
+		<li class="menuitem"><a href="#/">Chocolate shop</a></li>
+		<li class="menuitem"><a href="#">World of Lindt</a></li>
+		<li class="menuitem"><a href="">Sustainability</a></li>
+		<li class="menuitem"><a href="#">New</a></li>
+		<li class="menuitem"><a href="#">Recipes</a></li>
+		<li class="menuitem"><a href="#">Gift Ideas</a></li>
+    </ul>
+	<img src="Unknown.jpeg" >
 </div>
-<ul id="menu_horizontal">
-</div>
-<center>
-<img src=maxresdefault.jpg>
-</center>
-<I>
-<h3> DISCOVER OUR NEW FUSION OF FLAVOURS</h3>
-</I>
-<center>
-<img src=home_recipes_image.png>
-</center>
-<I>
-<p> EVERYDAY WITH EXCELLENCE </p>
-</I>
-<style>
-h1,h2{
-	display:inline;
-}</style>
-</head>
-<I>
-</I>
+<br>
+<img src="maxresdefault.jpg" class="responsive-img col-xs-12">
+<br>
+<h3> Discover our new fusion of flavours</h3>
+<br>
+<img src="home_recipes_image.png" class="responsive-img col-xs-12">
+<img src="photos.png" class="responsive-img col-xs-12">
 </body>
 </html>
-<img src="photos.png">
 
